# tarka

./: .dockerignore  .env.deploy.template  .env.example  .env.fixture.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  artifacthub-repo.yml  deploy.sh  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
agent/: .dockerignore  Dockerfile  __init__.py  console_api.py  dump.py  image_pull.py  logs_select.py  report.py  report_deterministic.py
config/: http_sources.yaml  third-party-catalog.yaml
dev/: Dockerfile.mock  README.md  mock-alertmanager.py  mock-logs.py  mock-prometheus.py  requirements.txt
docs/: LLM_SECURITY.md  README.md  chat_tools.md  cloudtrail_integration_summary.md  environment-variables-summary.md  index.html  multi-provider-llm.md  one-pager.md  site.css
eval/: QUICKSTART.md  README.md  __init__.py  conftest.py  runner.py
examples/: README.md
k8s/: configmap.yaml  console-ui-deployment.yaml  deployment.yaml  externalsecret.yaml  nats-jetstream.yaml  postgres-dev.yaml  rbac.yaml  secret.yaml  secretstore.yaml  worker-deployment.yaml
scripts/: capture-fixture.py  run-serve.sh  run-worker.sh  stamp-chart-version.py  sync-secrets.sh  test-ci.sh  validate-llm-config.sh
tests/: conftest.py  test_action_policy.py  test_alert_lifecycle_normalization.py  test_alertmanager_parsing.py  test_aws_chat_tools.py  test_aws_collector.py  test_aws_irsa_detection.py  test_aws_provider.py  test_base_triage_decision.py  test_bundle_ssot_extractors.py  test_canonical_family.py  test_capacity.py  test_capacity_dedupe.py  test_capacity_rightsizing_recommendation.py  test_case_memory_endpoint.py  test_case_resolution.py  test_case_retrieval_sql.py  test_caseize_identity.py  test_changes.py  test_chat_actions_tool.py  test_chat_autonomy.py  test_chat_intents.py  test_chat_no_postgres.py  test_chat_policy.py  test_chat_runtime_streaming.py  test_chat_thread_init.py  test_console_auth.py  (+92 more)
(+330 files in other folders)
